Stop IE7 displaying horizontal scrollbar in Document Library
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@10207 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 7043e2be7911dbd38f11a29792ccc43b149a73c5

--- a/root/projects/slingshot/source/web/themes/default/ie7.css
+++ b/root/projects/slingshot/source/web/themes/default/ie7.css
@@ -1,5 +1,9 @@
 /* CSS Overrides for Microsoft Internet Explorer v7 */
 
+
+/**
+ * Global site header
+ */
 .header div.util-menu
 {
     margin-top: -2px;
@@ -8,4 +12,16 @@
 .header .search-site-icon
 {
    top: -2px;
+}
+
+
+/**
+ * Document Library
+ */
+.toolbar .selected-items hr
+{
+   color: #e4e4e4;
+   margin: 0px;
+   text-align: center;
+   width: 10em;
 }
